--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         }
         
         function onPlayerReady(event) {
-            updateStatus("Vídeo carregado. Use os botões abaixo.");
+            updateStatus("Vídeo carregado. Use os botões acima.");
             document.getElementById('load-btn').disabled = false;
             document.getElementById('random-jump-btn').disabled = false;
             document.getElementById('start-btn').disabled = false;
