--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         }
         
         function onPlayerReady(event) {
-            updateStatus("Vídeo carregado. Use os botões abaixo.");
+            updateStatus("Vídeo carregado. Use os botões acima.");
             enableControlButtons();
         }
         
